[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/PlayerGui/ComTarget/ComTarget.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="ComTarget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="targetStatus" type="HBoxContainer" parent="Panel2/VBoxContainer"]
visible = false
margin_right = 1888.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )

[node name="labelShields" type="Label" parent="Panel2/VBoxContainer/targetStatus"]
margin_right = 942.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
text = "Shields: 100"
align = 1
valign = 1

[node name="labelArmour" type="Label" parent="Panel2/VBoxContainer/targetStatus"]
margin_left = 946.0
margin_right = 1888.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
text = "Armour: 100"
align = 1
valign = 1

[node name="targetImage" type="TextureRect" parent="Panel2/VBoxContainer"]
visible = false
margin_top = 40.0
margin_right = 1888.0
margin_bottom = 1048.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="labelName" type="Label" parent="Panel2/VBoxContainer"]
visible = false
margin_top = 1012.0
margin_right = 1888.0
margin_bottom = 1048.0
rect_min_size = Vector2( 0, 36 )
text = "Target"
align = 1
valign = 1

[node name="actionList" type="HBoxContainer" parent="Panel2/VBoxContainer"]
visible = false
margin_top = 1012.0
margin_right = 1888.0
margin_bottom = 1048.0

[node name="buttonHail" type="Button" parent="Panel2/VBoxContainer/actionList"]
margin_right = 942.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hail Target"

[node name="buttonMessage" type="Button" parent="Panel2/VBoxContainer/actionList"]
margin_left = 946.0
margin_right = 1888.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Send Message"
